--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -8,9 +8,9 @@
         
         <% 0.upto(7) do |x| %>
           <% if x % 2 == 0 %> 
-            <div class= "booyah-box col-xs-1"><%= "#{y}#{x}" %></div>
+            <div class= "booyah-box-cream col-xs-1"><%= "#{y}#{x}" %></div>
           <% else %>
-            <div class= "booyah-box-black col-xs-1"><%= "#{y}#{x}" %></div>
+            <div class= "booyah-box-brown col-xs-1"><%= "#{y}#{x}" %></div>
           <% end %>
         <% end %>
 
@@ -18,9 +18,9 @@
 
         <% 0.upto(7) do |x| %>
           <% if x % 2 == 0 %> 
-            <div class= "booyah-box-black col-xs-1"><%= "#{y}#{x}" %></div>
+            <div class= "booyah-box-brown col-xs-1"><%= "#{y}#{x}" %></div>
           <% else %>
-            <div class= "booyah-box col-xs-1"><%= "#{y}#{x}" %></div>
+            <div class= "booyah-box-cream col-xs-1"><%= "#{y}#{x}" %></div>
           <% end %>
         <% end %>
 
