--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,14 +1,15 @@
 <h1>Welcome to Let Me Check</h1>
 
-<div class="booyah-box col-xs-10 col-xs-offset-1">
-  <div class="col-xs-offset-2">
-    <% 7.downto(0) do |y| %>
+<div class="col-xs-10 col-xs-offset-1">
+  <div class="col-xs-offset-2"> <!--this "centers" the board on the page -->
+    <% 7.downto(0) do |y| %> <!-- each iteration represents one row of the board. The iteration method is .downto rather than .upto 
+    so that the 1st row is the bottom one -->
       
       <% if y % 2 == 0 %>
         
-        <% 0.upto(7) do |x| %>
-          <% if x % 2 == 0 %> 
-            <div class= "booyah-box-cream col-xs-1"><%= "#{y}#{x}" %></div>
+        <% 0.upto(7) do |x| %> <!-- each iteration represents a cell -->
+          <% if x % 2 == 0 %>  
+            <div class= "booyah-box-cream col-xs-1"><%= "#{y}#{x}" %></div> <!-- row starts with a cream cell -->
           <% else %>
             <div class= "booyah-box-brown col-xs-1"><%= "#{y}#{x}" %></div>
           <% end %>
@@ -18,7 +19,7 @@
 
         <% 0.upto(7) do |x| %>
           <% if x % 2 == 0 %> 
-            <div class= "booyah-box-brown col-xs-1"><%= "#{y}#{x}" %></div>
+            <div class= "booyah-box-brown col-xs-1"><%= "#{y}#{x}" %></div> <!-- row starts with a brown cell -->
           <% else %>
             <div class= "booyah-box-cream col-xs-1"><%= "#{y}#{x}" %></div>
           <% end %>
