Create and display a chessboard for the game, ensure that the board is responsive to screen size, and some housekeeping in order to please Rubocop.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,11 +54,12 @@
         </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
-
-
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-<%= yield %>
+  <% if notice %>
+    <p class="notice"><%= notice %></p>
+  <% elsif alert %>
+    <p class="alert"><%= alert %></p>
+  <% end %>
+  <%= yield %>
 
 </body>
 </html>
