--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,32 +1,17 @@
 <h1>Welcome to Let Me Check</h1>
-
+<!-- delete everything below once the route is set up for the game #show page, we have
+what we need to display the chessboard under views/game/show.html.erb -->
+<h2 class="text-center">BoatyMcBoatface vs DarthSidius</h2>
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <div class="col-xs-offset-2">
-    <% 7.downto(0) do |y| %>
-      
-      <% if y % 2 == 0 %>
-        
-        <% 0.upto(7) do |x| %>
-          <% if x % 2 == 0 %> 
-            <div class= "booyah-box-cream col-xs-1"><%= "#{y}#{x}" %></div>
-          <% else %>
-            <div class= "booyah-box-brown col-xs-1"><%= "#{y}#{x}" %></div>
-          <% end %>
+  <p class="boardTopBottom"></p>
+  <table>
+    <% 8.times do |y| %>
+      <tr>
+        <% 8.times do |x| %>
+          <td class="square"></td>
         <% end %>
-
-      <% else %>
-
-        <% 0.upto(7) do |x| %>
-          <% if x % 2 == 0 %> 
-            <div class= "booyah-box-brown col-xs-1"><%= "#{y}#{x}" %></div>
-          <% else %>
-            <div class= "booyah-box-cream col-xs-1"><%= "#{y}#{x}" %></div>
-          <% end %>
-        <% end %>
-
-      <% end %>
-
-      <div class="clear"></div>
+      </tr>
     <% end %>
-  </div>
+  </table>
+  <p class="boardTopBottom"></p>
 </div>
