Import missign dark wood background image. Apply same image to dark positions in both even and odd rows

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -28,10 +28,10 @@ table {
 
 
 table tr:nth-child(odd) td:nth-child(even) {
-  background: url('/assets/dark_wood_@2X.png');
+  background: url('/assets/dark_wood.jpg');
 }
 table tr:nth-child(even) td:nth-child(odd) {
-  background: #000;
+  background: url('/assets/dark_wood.jpg');
 }
 
 .square {
