Change loop method from 8.times to 7.downto(0) for rows and 0.upto(7) for columns so that the order of each cell in the table conform to the order of the pieces positions, which go from 0 to 7

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -5,9 +5,9 @@ what we need to display the chessboard under views/game/show.html.erb -->
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <p class="boardTopBottom"></p>
   <table>
-    <% 8.times do |y| %>
+    <% 7.downto(0) do |y| %>
       <tr>
-        <% 8.times do |x| %>
+        <% 0.upto(7) do |x| %>
           <td class="square"></td>
         <% end %>
       </tr>
