--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,7 +3,7 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <p class="boardTopBottom"></p>
   <table>
-    <% 8.times do |y| %>
+    <% 8.downto(1) do |y| %>
       <tr>
         <% 8.times do |x| %>
           <td class="square"></td>
