--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,17 +1,3 @@
 <h1>Welcome to Let Me Check</h1>
-<!-- delete everything below once the route is set up for the game #show page, we have
-what we need to display the chessboard under views/game/show.html.erb -->
-<h2 class="text-center">BoatyMcBoatface vs DarthSidius</h2>
-<div class="booyah-box col-xs-10 col-xs-offset-1">
-  <p class="boardTopBottom"></p>
-  <table>
-    <% 8.downto(1) do |y| %>
-      <tr>
-        <% 8.times do |x| %>
-          <td class="square"></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </table>
-  <p class="boardTopBottom"></p>
-</div>
+<br>
+<%= link_to 'Create a Game', games_path, class: 'btn btn-primary btn-large' %>
