--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,12 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-
+        <li><%= link_to 'All Games', games_path %></li>
       </ul>
 
 
       <ul class="nav navbar-nav navbar-right">
-        
+        <li><%= link_to 'New Game', new_game_path %></li>
         <% if (!user_signed_in?) %>
         <li><%= link_to 'Sign Up', new_user_registration_path %></li>
         <li><%= link_to 'Sign In', new_user_session_path %></li>
