--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,1 +1,4 @@
-<h1>Games Show</h1>
+<div class="container">
+  <h1>Games Show</h1>
+  <%= link_to "Join", game_enrollments_path(@game), method: :post, class: 'btn btn-primary' %>
+</div>
