--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Games #show page</h1>
+<h1>games#show page</h1>
 <h2 class="text-center">BoatyMcBoatface vs DarthMaul</h2>
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <p class="boardTopBottom"></p>
