--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to Let Me Check</h1>
 <br>
-<%= link_to 'Create a Game', games_path, method: :post, class: 'btn btn-primary btn-large' %>
+<%= link_to 'Start a Game', new_game_path, class: 'btn btn-primary btn-large' %>
