Changed the join button to an update action and removed the enrollments table, model, and controller

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -14,5 +14,5 @@
   <p class="boardTopBottom"></p>
 </div>
 <div class="container">
-  <%= link_to "Join", game_enrollments_path(@game), method: :post, class: 'btn btn-primary' %>
-</div>
+  <%= link_to "Join", game_path(@game), method: :patch, class: 'btn btn-primary' %>
+</div
