--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -14,5 +14,7 @@
   <p class="boardTopBottom"></p>
 </div>
 <div class="container">
-  <%= link_to "Join", game_path(@game), method: :patch, class: 'btn btn-primary' %>
+  <% if @game.black_player_id.nil? && @game.white_player_id != current_user.id %>
+    <%= link_to "Join", game_path(@game), method: :patch, class: 'btn btn-primary' %>
+  <% end %>
 </div
