Add pry to the Gemfile, add a column to the pieces table for images, adjust the games#show page, adjust game_helper.rb, adjust the show method within the games_controller, and adjust the method for setup_board! within the Game Model.

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,8 +5,10 @@
   <table>
     <% 8.downto(1) do |y| %>
       <tr>
-        <% 8.times do |x| %>
-          <td class="square"></td>
+        <% 1.upto(8) do |x| %>
+          <td data-x="<%= x %>" data-y="<%= y %>"class="square">
+            <span><%= display_pieces(@game, x, y) %></span>
+          </td>
         <% end %>
       </tr>
     <% end %>
