--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,5 +1,10 @@
 <h1>games#show page</h1>
-<h2 class="text-center"><%= @white_player.email %> vs <%= @black_player.email %></h2>
+<h2 class="text-center">
+  <% if !@game.black_player_id.nil? %>
+    <%= @white_player.email %> vs <%= @black_player.email %></h2>
+  <% else %>
+    <%= @white_player.email %> vs Someone
+  <% end %>
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <p class="boardTopBottom"></p>
   <table>
