--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,7 +5,7 @@
   <% else %>
     <%= @white_player.email %> vs Someone
   <% end %>
-<div class="booyah-box col-xs-10 col-xs-offset-1">
+<div class="booyah-box-board col-xs-10 col-xs-offset-1">
   <p class="boardTopBottom"></p>
   <table>
     <% 8.downto(1) do |y| %>
