--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -12,7 +12,7 @@
       <tr>
         <% 1.upto(8) do |x| %>
           <td data-x="<%= x %>" data-y="<%= y %>"class="square">
-            <span><%= display_pieces(@game, x, y) %></span>
+            <span><%= display_pieces(@chess_pieces, x, y) %></span>
           </td>
         <% end %>
       </tr>
