Improve the visibility of the black pieces on the board.

--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -15,10 +15,10 @@ table {
 
 
 table tr:nth-child(odd) td:nth-child(even) {
-  background: url('/assets/dark_wood.jpg');
+  background: url('/assets/dark_wood_70px.jpg');
 }
 table tr:nth-child(even) td:nth-child(odd) {
-  background: url('/assets/dark_wood.jpg');
+  background: url('/assets/dark_wood_70px.jpg');
 }
 
 .square {
