Attempted to debug the helper methods for the game show page

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -23,3 +23,8 @@ h2 {
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding:10px;
 }
+
+.selected-piece {
+  border-style: solid;
+  color: yellow;
+}
