--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -7,7 +7,7 @@
       <tr>
         <% 1.upto(8) do |x| %>
           <td data-x="<%= x %>" data-y="<%= y %>"class="square">
-            <span><%= display_pieces(x, y) %></span>
+            <span><%= display_piece_pieces(x, y) %></span>
           </td>
         <% end %>
       </tr>
