--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -6,17 +6,14 @@
     <% 8.downto(1) do |y| %>
       <tr>
         <% 1.upto(8) do |x| %>
-          <td data-x="<%= x %>" data-y="<%= y %>"class="square">
-            <span><%= display_piece_pieces(x, y) %></span>
-          </td>
+              <td data-x="<%= x %>" data-y="<%= y %>"class="square">
+                <%= link_to piece_path(@piece, piece: {x_coord: x, y_coord: y}), method: :patch do %>
+                  <span><%= display_piece_pieces(x, y) %></span>
+                <% end %>
+              </td>
         <% end %>
       </tr>
     <% end %>
   </table>
   <p class="boardTopBottom"></p>
 </div>
-<!-- <div class="container">
-  <% if @piece.game.black_player_id.nil? && @game.white_player_id != current_user.id %>
-    <%= link_to "Join", game_path(@game), method: :patch, class: 'btn btn-primary' %>
-  <% end %>
-</div> -->
