Added explanatory comment for the unused javascript

--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -1,4 +1,4 @@
-<script>
+<script> //this javascript doesn't need to be implemented until we add drag-and-drop functionality. Feel free to delete. 
 /*  $(function(){
     $("td").click(function(){
     	var xCoord = $(this).data("X");
@@ -8,7 +8,7 @@
     	$.ajax({
     	  url: updateURL,
     	  type: 'PUT',
-       dataType: 'json',
+        dataType: 'json',
         data: { piece: { x_coord: xCoord, y_coord: yCoord } }    	  
     	});
     });    
