--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,3 +1,8 @@
+
+<script>
+  $("#draggable").draggable();
+</script>
+
 <h1>games#show page</h1>
 <h2 class="text-center">
   <% if !@game.black_player_id.nil? %>
@@ -20,6 +25,7 @@
   </table>
   <p class="boardTopBottom"></p>
 </div>
+<div id="draggable">DRAG</div>
 <div class="container">
   <% if @game.black_player_id.nil? && @game.white_player_id != current_user.id %>
     <%= link_to "Join", game_path(@game), method: :patch, class: 'btn btn-primary' %>
