--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,6 +1,16 @@
 
+<style>
+#makeMeDraggable { width: 300px; height: 300px; background: red; }
+</style>
+
 <script>
-  $("#draggable").draggable();
+//$(init);
+$(document).ready(function () {
+  $(".draggable").draggable({
+  containment: '#board'
+  });
+});
+
 </script>
 
 <h1>games#show page</h1>
@@ -12,11 +22,11 @@
   <% end %>
 <div class="board-booyah-box col-lg-6 col-lg-offset-3 col-xs-10 col-xs-offset-1">
   <p class="boardTopBottom"></p>
-  <table>
+  <table id="board">
     <% 8.downto(1) do |y| %>
       <tr>
         <% 1.upto(8) do |x| %>
-          <td data-x="<%= x %>" data-y="<%= y %>"class="square">
+          <td data-x="<%= x %>" data-y="<%= y %>" class="square">
             <span><%= display_game_pieces(x, y) %></span>
           </td>
         <% end %>
@@ -25,9 +35,9 @@
   </table>
   <p class="boardTopBottom"></p>
 </div>
-<div id="draggable">DRAG</div>
 <div class="container">
   <% if @game.black_player_id.nil? && @game.white_player_id != current_user.id %>
     <%= link_to "Join", game_path(@game), method: :patch, class: 'btn btn-primary' %>
   <% end %>
 </div>
+
