Implement jquery's droppable method on the board squares and use position method to make pieces snap and align to their new positions. Add revert option on draggable method to return pieces to their original position if they are not placed in a droppable area

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,9 +6,25 @@
 <script>
 //$(init);
 $(document).ready(function () {
+  
   $(".draggable").draggable({
-  containment: '#board'
+  containment: '#board',
+  revert: "invalid" //returns the piece to the original position if it is not placed in a droppable area
   });
+
+
+  $(".square").droppable({
+    //snaps the piece to the new square
+    drop: function (event, ui){
+      ui.draggable.position({ 
+        of: $(this), 
+        my: 'left top', 
+        at: 'left top' 
+        });
+    }
+  });
+
+
 });
 
 </script>
