--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -14,7 +14,20 @@
     });    
     
   }); */
-  
+  $(function(){
+    $("span").draggable( {
+      containment: "table",
+      cursor: "move",
+      //snap: true,
+      //stop: handleDragStop,
+    });
+
+    // $("td").droppable( {
+    //   drop: function() {
+    //     $("span")
+    //   }
+    // });
+  });
   
 </script>
 
