--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,3 +1,45 @@
+<script> //this javascript doesn't need to be implemented until we add drag-and-drop functionality. Feel free to delete. 
+/*  $(function(){
+    $("td").click(function(){
+      var xCoord = $(this).data("X");
+      var yCoord = $(this).data("Y");
+      var updateURL = $(this).data("updateURL");
+      
+      $.ajax({
+        url: updateURL,
+        type: 'PUT',
+        dataType: 'json',
+        data: { piece: { x_coord: xCoord, y_coord: yCoord } }       
+      });
+    });    
+    
+  }); */
+  $(function(){
+    $(".chessPiece").draggable({
+      containment: ".board-booyah-box",
+      cursor: "move",
+      revert: true,
+    });
+
+    $("td").droppable({
+      drop: handleDragStop,
+      hoverClass: "hoveredSquare"
+    });
+
+    function handleDragStop( event, ui ) {
+      ui.draggable.draggable( 'option', 'revert', false );
+      var destination_x = $(this).data("x");
+      var destination_y = $(this).data("y");
+      $.ajax({
+        type: 'PATCH',
+        url: ui.draggable.data('update-url'),
+        dataType: 'json',
+        data: { x_coord: destination_x, y_coord: destination_y }
+      });
+    }
+  });  
+</script>
+
 <h1>games#show page</h1>
 <h2 class="text-center">
   <% if !@game.black_player_id.nil? %>
@@ -12,7 +54,7 @@
       <tr>
         <% 1.upto(8) do |x| %>
           <td data-x="<%= x %>" data-y="<%= y %>"class="square">
-            <span><%= display_game_pieces(x, y) %></span>
+            <span class="chessPiece" data-update-url><%= display_game_pieces(x, y) %></span>
           </td>
         <% end %>
       </tr>
