--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -14,30 +14,9 @@
     });    
     
   }); */
-  $(function(){
-    $(".chessPiece").draggable({
-      containment: ".board-booyah-box",
-      cursor: "move",
-      revert: true,
-    });
 
-    $("td").droppable({
-      drop: handleDragStop,
-      hoverClass: "hoveredSquare"
-    });
+  $(init);
 
-    function handleDragStop( event, ui ) {
-      ui.draggable.draggable( 'option', 'revert', false );
-      var destination_x = $(this).data("x");
-      var destination_y = $(this).data("y");
-      $.ajax({
-        type: 'PATCH',
-        url: ui.draggable.data('update-url'),
-        dataType: 'json',
-        data: { piece: { x_coord: destination_x, y_coord: destination_y } }
-      });
-    }
-  });  
 </script>
 
 <h1>games#show page</h1>
