Rename JS function, init, to something more meaningful

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -20,4 +20,4 @@
 </div>
 
 <!-- Execute the script that allows moving pieces on the board. -->
-<script>$(init);</script>
+<script>$(dragDrop);</script>
