--- a/app/views/pieces/update.js.erb
+++ b/app/views/pieces/update.js.erb
@@ -3,4 +3,4 @@
 $( ".board-booyah-box" ).html("<%= escape_javascript(render('games/chess_board')) %>");
 // The following calls the function within master.js to make 
 // pieces draggable and squares droppable.
-init();
+dragDrop();
