--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -21,3 +21,4 @@
 
 <!-- Execute the script that allows moving pieces on the board. -->
 <script>$(dragDrop);</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
