--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -46,3 +46,8 @@ $square-size-tablet: 60px;
 .boardTopBottom {
   padding: 1em 0
 }
+
+.hoveredSquare {
+  outline: 3px solid rgba(251, 248, 93, 0.7);
+  box-shadow: 7px 7px 11px 0 rgba(0, 0, 0, 0.5);
+}
