--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,59 +1,24 @@
-
-<style>
-#makeMeDraggable { width: 300px; height: 300px; background: red; }
-</style>
-
-<script>
-
-$(document).ready(function () {
-  
-  $(".draggable").draggable({
-  containment: '#board',
-  revert: "invalid" //returns the piece to the original position if it is not placed in a droppable area
-  });
-
-
-  $(".square").droppable({
-    //snaps the piece to the new square
-    drop: function (event, ui){
-      ui.draggable.position({ 
-        of: $(this), 
-        my: 'left top', 
-        at: 'left top' 
-        });
-    }
-  });
-
-
-});
-
-</script>
-
 <h1>games#show page</h1>
+
 <h2 class="text-center">
   <% if !@game.black_player_id.nil? %>
-    <%= @white_player.email %> vs <%= @black_player.email %></h2>
+    <%= @white_player.email %><h3> vs </h3><%= @black_player.email %>
   <% else %>
     <%= @white_player.email %> vs Someone
   <% end %>
+</h2>
+
 <div class="board-booyah-box col-lg-6 col-lg-offset-3 col-xs-10 col-xs-offset-1">
-  <p class="boardTopBottom"></p>
-  <table id="board">
-    <% 8.downto(1) do |y| %>
-      <tr>
-        <% 1.upto(8) do |x| %>
-          <td data-x="<%= x %>" data-y="<%= y %>" class="square">
-            <span><%= display_game_pieces(x, y) %></span>
-          </td>
-        <% end %>
-      </tr>
-    <% end %>
-  </table>
-  <p class="boardTopBottom"></p>
+  <!-- push the board to a partial -->
+  <%= render 'chess_board' %>
 </div>
+
 <div class="container">
   <% if @game.black_player_id.nil? && @game.white_player_id != current_user.id %>
     <%= link_to "Join", game_path(@game), method: :patch, class: 'btn btn-primary' %>
   <% end %>
 </div>
 
+<!-- Execute the script that allows moving pieces on the board. -->
+<script>$(dragDrop);</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
