--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -7,7 +7,7 @@
           <td data-x="<%= x %>" data-y="<%= y %>"class="square">
             <% if piece.present? %>
               <span class="chessPiece" data-update-url="<%= piece_url(piece) %>">
-                <%= image_tag(piece.img, class: "img-responsive") %>
+                <%= display_game_pieces(x, y) %>
               </span>
             <% end %>
           </td>
