--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,9 @@
  *
  *= require_self
  *= require_tree .
+
+ *= require jquery-ui/core
+ *= require jquery-ui/draggable
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
