--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -9,7 +9,7 @@
 </h2>
 
 <div class="board-booyah-box col-lg-6 col-lg-offset-3 col-xs-10 col-xs-offset-1" data-no-turbolink>
-  <!-- push the board to a partial -->
+  <!-- pull in the board from a partial -->
   <%= render 'chess_board' %>
 </div>
 
