Resolve the Ajax request; enable the board to refresh and update the pieces; and remove the span from the chess board

--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -6,9 +6,9 @@
         <% piece = @game.pieces.find_by(x_coord: x, y_coord: y) %>
           <td data-x="<%= x %>" data-y="<%= y %>"class="square">
             <% if piece.present? %>
-              <span class="chessPiece" data-update-url="<%= piece_url(piece) %>">
-                <%= image_tag(piece.img, class: "chessPiece img-responsive") %>
-              </span>
+              <%= image_tag(piece.img, 
+                            class: "chessPiece img-responsive",
+                            "data-update-url" => piece_url(piece)) %>       
             <% end %>
           </td>
         <% end %>
