Warn the player if their king is in check
* Adjust the pieces_controller and add instance variables.
* Add a .warning class to the _chess_board partial.
* Add classes for .warning and .kingInCheckMessage, as well as a
placeholder for .checkmate within game.css.scss
* Adjust update.js.erb and use the newly created instance variables
in order to display a warning message if a player's king is in check.

--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -52,6 +52,23 @@ $square-size-tablet: 60px;
   box-shadow: 7px 7px 11px 0 rgba(0, 0, 0, 0.5);
 }
 
-/*.ui-draggable-dragging img {
-   box-shadow: 0px 0px 10px 0 red;
+.warning {
+  font-size: 1.8em;
+  margin-top: -1em;
+}
+
+/*consider changing to .kingInCheckMessage*/
+.kingInCheckMessage {
+  font-size: 1.8em;
+  color: #B64402;
+  text-shadow: 0px 2px 2px rgb(109, 63, 63), 0px 3px 6px #351B03;
+  margin-top: -1em;
+}
+
+/* place-holder for checkmate
+.checkmate {
+  font-size: 1.8em;
+  color: #C90202;
+  text-shadow: 0px 2px 2px rgb(109, 63, 63), 0px 3px 6px #351B03;
+  margin-top: -1em;
 }*/
