--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -1,4 +1,5 @@
 <p class="boardTopBottom"></p>
+<div class="warning text-center">&nbsp</div>
   <table id="board">
     <% 8.downto(1) do |y| %>
       <tr>
