Allow manipulation of the king with jQuery
* Adjust master.js
* Remove instance variables from pieces_controller
* Remove logic from _chess_board partial & move it to game_helper.rb
* Adjust methods within game_helper.rb & create the method add_king_id
* Add a helper method for in_check? and refactor
* Add a new file: app/assets/stylesheets/animate.css
* Adjust update.js.erb, use the the newly created id's for the kings,
and add additional enhancements which rely on animate.css

--- a/app/views/pieces/update.js.erb
+++ b/app/views/pieces/update.js.erb
@@ -6,14 +6,21 @@ $( ".board-booyah-box" ).html("<%= escape_javascript(render('games/chess_board')
 // pieces draggable and squares droppable.
 dragDrop();
 
-<% if @black_king_in_check %>
-  $( ".warning" ).html("Hello, black is in check!")
-                 .addClass("kingInCheckMessage", 1000)
-                 .animate({letterSpacing: ".3em"}, "slow");
-<% elsif @white_king_in_check %>
-  $( ".warning" ).html("Hello, white is in check!")
-                 .addClass("kingInCheckMessage", 1000)
-                 .animate({letterSpacing: ".3em"}, "slow");
+<% if @game.in_check?('black') %>
+  $( ".warning" ).html( "Hello, black is in check!" )
+                 .addClass( "kingInCheckMessage", 1000 )
+                 .addClass( "animated bounceInUp" )
+                 .animate( { letterSpacing: ".3em" }, 1200 );
+ 
+  $("#black-king").addClass( "animated bounce" );
+
+<% elsif @game.in_check?('white') %>
+  $( ".warning" ).html( "Hello, white is in check!" )
+                 .addClass( "kingInCheckMessage", 1000 )
+                 .addClass( "animated bounceInUp" )
+                 .animate( { letterSpacing: ".3em" }, 1200 );
+
+  $("#white-king").addClass( "animated bounce" );
 <% end %>
 
 // The _chess_board partial has a div with the class .warning 
