--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -4,13 +4,8 @@
     <% 8.downto(1) do |y| %>
       <tr>
         <% 1.upto(8) do |x| %>
-        <% piece = @game.pieces.find_by(x_coord: x, y_coord: y) %>
           <td data-x="<%= x %>" data-y="<%= y %>"class="square">
-            <% if piece.present? %>
-              <%= image_tag(piece.img, 
-                            class: "chessPiece img-responsive",
-                            "data-update-url" => piece_url(piece)) %>       
-            <% end %>
+            <%= game_pieces(@game, x, y) %>
           </td>
         <% end %>
       </tr>
