Add a glowing effect for a king in check
* Add image file assets/images/red_king.png
* Add blushing-king class to game.css.scss
* Adjust update.js.erb

--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -64,6 +64,10 @@ $square-size-tablet: 60px;
   margin-top: -1em;
 }
 
+.blushing-king {
+  background: url('/assets/red_king.png');
+}
+
 /* place-holder for checkmate
 .checkmate {
   font-size: 1.8em;
