Add a rudimentary message indicating player turn
* Adjust views/games/show.html.erb and add css class .player-turn
* Add css classes for .black-player-turn and .white-player-turn inside
game.css.scss
* Adjust views/pieces/update.js.erb and have it push a helpful message
to games#show page that indicates whose turn it is during the game
* Uncover bug which allows a pawn to check a king from across the board
* Write several tests for the bug and squash it by adjusting the
valid_move? method within the Piece model
* Refactor valid_move? within the Piece model
* Adjust travis.yml
* Adjust config/environments/test.rb to get rid of annoying deprecation
message from RSpec
* Make failing tests pass

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -8,6 +8,8 @@
   <% end %>
 </h2>
 
+<div class="player-turn text-center"></div>
+
 <div class="board-booyah-box col-lg-6 col-lg-offset-3 col-xs-10 col-xs-offset-1" data-no-turbolink>
   <!-- pull in the board from a partial -->
   <%= render 'chess_board' %>
