--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -68,6 +68,18 @@ $square-size-tablet: 60px;
   background: url('/assets/red_king.png');
 }
 
+.white-player-turn {
+  font-size: 1.4em;
+  color: red;
+  text-transform: capitalize;
+}
+
+.black-player-turn {
+  font-size: 1.4em;
+  color: red;
+  text-transform: capitalize;
+}
+
 /* place-holder for checkmate
 .checkmate {
   font-size: 1.8em;
