--- a/app/views/pieces/update.js.erb
+++ b/app/views/pieces/update.js.erb
@@ -4,14 +4,23 @@ $( ".board-booyah-box" ).html("<%= escape_javascript(render('games/chess_board')
 
 // The following calls the function within master.js to make 
 // pieces draggable and squares droppable.
-dragDrop();
+<% current_player_id = @game.white? ? @game.white_player_id : @game.black_player_id %>
+<% if current_user.id == current_player_id %>
+  dragDrop();
+<% end %>
 
 // Display a message indicating whether it's white or black's turn.
 <% if @game.white? %>
+  $( ".black-or-white-coords" ).addClass( "animated fadeIn white-coords", 800 )
+                               .removeClass( "black-coords", "slow" );
+
   $( ".player-turn" ).html( "current move: white player" )
                      .addClass( "animated fadeInDown white-player-turn", 1000 );
 <% elsif @game.black? %>
-    $( ".player-turn" ).html( "current move: black player" )
+  $( ".black-or-white-coords" ).addClass( "animated fadeIn black-coords", 800 )
+                               .removeClass( "white-coords", "slow" );
+
+  $( ".player-turn" ).html( "current move: black player" )
                      .addClass( "animated fadeInUp black-player-turn", 1000 );
 <% end %>
 
