--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -1,4 +1,4 @@
-<p class="boardTopBottom"></p>
+<p class="boardTopBottom letter-coordinate"></p>
 <div class="warning text-center">&nbsp</div>
   <table id="board">
     <% 8.downto(1) do |y| %>
@@ -11,4 +11,4 @@
       </tr>
     <% end %>
   </table>
-<p class="boardTopBottom"></p>
+<p class="boardTopBottom file-indicator text-center">A B C D E F G H</p>
