Enhancements for displaying rank and file
* Adjust master.js, create a new function gameStartMessage, so as to
indicate whose turn it is at the beginning of a game.
* Adjust the games#show page and add bootstrap grid classes to the
board-booyah-box. Add a script to call to display the gameStartMessage.
* Adjust game.css.scss and add further optimizations for mobile devices
* Add CSS classes for rank and file indicators.
* Adjust _chess_board.html.erb, add table columns to the chessboard,
and use the left-most column to indicate rank. Collapse the borders for
those new cells. Add lower case letters to indicate file columns.
* Add the add_squash_class method inside game_helper.rb to add a class
for the cells to be collapsed.
* Adjust the CSS for the checkerboard pattern so the board still looks
correct.

--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -1,14 +1,18 @@
-<p class="boardTopBottom letter-coordinate"></p>
+<p class="boardTopBottom"></p>
 <div class="warning text-center">&nbsp</div>
   <table id="board">
+
     <% 8.downto(1) do |y| %>
       <tr>
-        <% 1.upto(8) do |x| %>
-          <td data-x="<%= x %>" data-y="<%= y %>"class="square">
+        <% 0.upto(9) do |x| %>
+          <td data-x="<%= x %>" data-y="<%= y %>
+          "class="square<%= + " rank-indicator center-text" if (x == 0) %>
+          <%= add_squash_class(x) %>" >
             <%= game_pieces(@game, x, y) %>
           </td>
         <% end %>
       </tr>
+
     <% end %>
   </table>
-<p class="boardTopBottom file-indicator text-center">A B C D E F G H</p>
+<p class="boardTopBottom file-indicator text-center col-xs-12">a b c d e f g h</p>
