--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -1,4 +1,6 @@
 $square-size: 70px;
+$rank-file-font-size: 2em;
+$rank-file-letter-spacing: 0.75em;
 
 .table-surface {
   width: 100%;
@@ -13,13 +15,8 @@ $square-size: 70px;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
 }
-.file-indicator {
-  font-size: 2em;
-  padding-left: 2%;
-  padding-top: 2%;
-  letter-spacing: 0.84em;
-}
 
+/* ---- indicators for rank and file on board edges ------- */
 .white-letters {
   color: #fff;
 }
@@ -28,15 +25,104 @@ $square-size: 70px;
   color: black;
 }
 
+.rank-indicator {
+  font-size: $rank-file-font-size;
+}
+
+.file-indicator {
+  font-size: $rank-file-font-size;
+  padding-left: 5%;
+  padding-top: 2%;
+  letter-spacing: $rank-file-letter-spacing;
+  text-shadow: 0px 2px 3px #555;
+}
+
+/* --------- optimizations for tablets ----------- */
+/*$table-surface-width-tablet-landscape: 76%;
+@media (min-width: 761px) and (max-width: 1024px) {
+  .table-surface {
+    width: $table-surface-width-tablet-landscape;
+  }
+}*/
+
+/* tablet held in portrait */
+@media (max-width: 768px) {
+  .file-indicator {
+    font-size: 1.9em;
+    letter-spacing: 0.71em;
+    padding-left: 5%;
+  }
+}
+
+/* tablet held in landscape */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .file-indicator {
+    font-size: 1.9em;
+    letter-spacing: 0.93em;
+    padding-left: 5%;
+  }
+}
+
+$square-size-tablet: 60px;
+@media (min-width: 768px) and (max-width: 1024px) {
+  .square {
+    width: $square-size-tablet;
+    height: $square-size-tablet;
+  }
+}
+
+/* ---------  optimizations for cell-phones  ----------- */
+$rank-file-font-size-cell-portrait: 1em;
+/* iphone5 held in portrait */
+@media (max-width: 321px) {
+  .file-indicator {
+    font-size: $rank-file-font-size-cell-portrait;
+    letter-spacing: 0.37em;
+    padding-left: 9%;
+  }
+}
+
+/* iPhone 6 and s5 held in portrait */
+@media (min-width: 359px) and (max-width: 376px) {
+  .file-indicator {
+    font-size: $rank-file-font-size-cell-portrait;
+    letter-spacing: 0.53em;
+    padding-left: 8%;
+  }
+}
+
+/* Nexus5x iPhone6+ Nexus6p held in portrait */
+@media (min-width: 377px) and (max-width: 436px) {
+  .file-indicator {
+    font-size: $rank-file-font-size-cell-portrait;
+    letter-spacing: 0.70em;
+    padding-left: 7%;
+  }
+}
+/*  -----------------------------------------------  */
+
 table {
   margin: 0 auto;
 }
 
+/*eliminate the border for the table column that has the rank numbers*/
+td.rank-indicator {
+  border: none;
+}
 
-table tr:nth-child(odd) td:nth-child(even) {
+td.squash-me {
+  border: none;
+}
+
+/*Starting from the top [ row 1 ( *or rank-8 ) ], handle rows 2, 4, 6, and 8 
+then take each even column (remember that there is the hidden column for the
+rank-indicator cells) and set the dark background */
+table tr:nth-child(n+2):nth-child(-n+8):nth-child(even) td:nth-child(n+2):nth-child(-n+9):nth-child(even) {
   background: url('/assets/med_birdseye_70px.jpg');
 }
-table tr:nth-child(even) td:nth-child(odd) {
+
+/* Starting from the top [ row 1 ( *or rank-8 ) ], handle rows 1, 3, 5, and 7 */
+table tr:nth-child(n+1):nth-child(-n+8):nth-child(odd) td:nth-child(n+2):nth-child(-n+9):nth-child(odd) {
   background: url('/assets/med_birdseye_70px.jpg');
 }
 
@@ -62,14 +148,6 @@ $square-size-mobile: 30px;
   }
 }
 
-$square-size-tablet: 60px;
-@media (min-width: 761px) and (max-width: 1024px) {
-  .square {
-    width: $square-size-tablet;
-    height: $square-size-tablet;
-  }
-}
-
 .boardTopBottom {
 
 }
@@ -81,6 +159,7 @@ $square-size-tablet: 60px;
 
 .warning {
   font-size: 1.8em;
+  padding-bottom: .48em;
 }
 
 .kingInCheckMessage {
