--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -9,7 +9,8 @@
 <div class="player-turn text-center"></div>
 
 <div class="container table-surface">
-  <div class="board-booyah-box col-lg-6 col-lg-offset-3 col-xs-10 col-xs-offset-1" data-no-turbolink>
+  <div class="board-booyah-box col-lg-6 col-lg-offset-3 col-sm-10 
+  col-sm-offset-1 col-xs-10 col-xs-offset-1" data-no-turbolink>
     <!-- pull in the board from a partial -->
     <%= render 'chess_board' %>
   </div>
@@ -29,4 +30,8 @@
   <% if current_user.id == current_player_id %>
     dragDrop();
   <% end %>
+</script>
+
+<script type="text/javascript">
+  gameStartMessage();
 </script>
