Display numbers to indicate rank on chessboard
* Adjust game.css.scss
* Adjust _chess_board.html.erb, and offload logic to game_helper.rb
* Adjust game_helper.rb and place the add_rank_indicator_class method

--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -27,6 +27,9 @@ $rank-file-letter-spacing: 0.75em;
 
 .rank-indicator {
   font-size: $rank-file-font-size;
+  text-align: center;
+  padding-right: 0.4em;
+  text-shadow: 0px 2px 3px #555;
 }
 
 .file-indicator {
