--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -10,7 +10,7 @@
 
 <div class="container table-surface">
   <div class="board-booyah-box col-lg-6 col-lg-offset-3 col-sm-10 
-  col-sm-offset-1 col-xs-10 col-xs-offset-1" data-no-turbolink>
+  col-sm-offset-1 col-xs-12" data-no-turbolink>
     <!-- pull in the board from a partial -->
     <%= render 'chess_board' %>
   </div>
