Minor cosmetic tweaks
* Adjust games#show page and place the div that contains
the player-turn message a little bit lower in the page.
* Adjust games.css.scss & add some breathing room for the board.

--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -3,6 +3,7 @@ $rank-file-font-size: 1.6em;
 
 .table-surface {
   width: 100%;
+  padding: 3em 0;
   background: url('/assets/upfeathers.png');
 }
 
@@ -234,7 +235,7 @@ $kingInCheckMessage-iphone5: .8em;
 
 .white-player-turn {
   font-size: 1.4em;
-  color: #9CAAA8;
+  color: #858383;
   text-transform: capitalize;
 }
 
