Do not require re-retrieval of assets on refresh

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -54,7 +54,7 @@
     });
 
     channel.bind('move_made', function(data) {
-      window.location.reload(true);
+      window.location.reload(false);
     });
   });
 </script>
