Create game#destroy action and link button on game#show page to it

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -23,6 +23,10 @@
   <% end %>
 </div>
 
+<div class="container">
+  <%= link_to "Concede the Game", game_path(@game), method: :delete, class: 'btn btn-primary' %>
+</div>
+
 <br />
 
 <!-- Execute the script that allows moving pieces on the board. -->
