Style SignIn/SignUp pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 
  *= require jquery-ui/core
  *= require jquery-ui/draggable
+ *= require devise_bootstrap_views
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
